fixed bug- homesection not showing first in smalldevices

--- a/css/style.css
+++ b/css/style.css
@@ -724,3 +724,7 @@ section {
 body{
   overflow-x: hidden;
 }
+/* Fixing homesection not showing first in small screens */
+#home{
+  height: 100vh;
+}
